# symbolic_math_verify

./: LLM.md  README.md  SUBMIT.md  YAML_tutorial.md  config.json  invalid_305_bug5_blank_line_bad_step.yaml  pyproject.toml  run_server.py
src/: __init__.py  check_calculation.py  check_substitution.py  check_util.py  verify_yaml.py
symbolic_math_verify/: __init__.py  check_subscript_substitution.py  check_util.py  extract_variables.py  verify_yaml.py
test_yaml/: invalid_01_axiom_missing_vars.yaml  invalid_02_axiom_unused_var.yaml  invalid_03_first_step_not_known.yaml  invalid_04_bad_step_link.yaml  invalid_05_calculation_wrong_equation.yaml  invalid_06_yaml_syntax.yaml  invalid_07_prompt_axiom_missing_vars.yaml  invalid_08_prompt_axiom_missing_equation.yaml  invalid_09_prompt_unused_var.yaml  invalid_100_bug1_undeclared_callable_identity.yaml  invalid_102_bug1_declared_laplace.yaml  invalid_103_bug1_declared_laplace.yaml  invalid_10_prompt_missing_symbol.yaml  invalid_11_prompt_bad_equation_trailing_equals.yaml  invalid_12_prompt_bad_equation_chained_equals.yaml  invalid_13_prompt_proof_first_not_known.yaml  invalid_14_prompt_proof_link_break.yaml  invalid_15_prompt_bad_rearrangement.yaml  invalid_16_prompt_calc_equation_not_known.yaml  invalid_17_prompt_calc_wrong_value.yaml  invalid_18_substitution_not_applied.yaml  invalid_19_substitution_unknown_equation.yaml  invalid_202_bug1_undeclared_callable_identity.yaml  invalid_20_substitution_missing_equation.yaml  invalid_212_bug2_bad_underscore_symbol_name.yaml  invalid_21_substitution_missing_source.yaml  invalid_22_subscript_not_applied.yaml  invalid_23_subscript_wrong_family.yaml  invalid_241_bug5_expected_symbol_nonsense.yaml  invalid_242_bug5_expected_symbol_mismatch.yaml  invalid_24_subscript_missing_suffix.yaml  invalid_251_bug6_false_identity_linear.yaml  invalid_252_bug6_false_identity_trig.yaml  invalid_25_subscript_missing_source.yaml  invalid_26_autovars_first_step_not_known.yaml  (+106 more)
(+22 files in other folders)
