[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "symbolic-math-verify"
version = "0.2.1"
description = "Symbolic math verification utilities built on SymPy."
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
authors = [
  { name = "Brosnan Yuen" }
]
dependencies = [
  "PyYAML>=6.0.3",
  "sympy>=1.14",
]
keywords = ["math", "symbolic", "sympy", "verification", "yaml"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Documentation = "https://pypi.org/project/symbolic-math-verify/"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["symbolic_math_verify*"]
